add column abount "norereview"

--- a/web/ja/tutorial/handson/section03.html
+++ b/web/ja/tutorial/handson/section03.html
@@ -57,7 +57,7 @@
 	</p>
 
 	<div class="inucolumn">
-		<h2 id="forreview">レビューワーを意識してみよう</h2>
+		<h3 id="forreview">レビューワーを意識してみよう</h3>
 		<p>
 			DBFluteハンズオンのレビューワーがいる人いない人いろいろだと思いますが...
 			いずれにせよ、ハンズオンでコードを書く時は "レビューワー" を意識してみましょう。
@@ -67,6 +67,13 @@
 		<p>
 			<em class="keyword">レビューしやすいコードってどんなコード？</em>
 			を考え続けることが大切です。
+		</p>
+	</div>
+	<div class="inucolumn">
+		<h3 id="norereview">他にも似たところないか探す習慣を</h2>
+		<p>
+			また、何かひとつレビューで指摘されたら、他のところにも似たようなものがないか確認する習慣を付けましょう。
+			例えば本番運用でバグが見つかって、また別の場所で同じバグが発生すると効率が悪いです。同じ指摘を受けないように気をつけましょう。
 		</p>
 	</div>
 
