just fix: hands-on supplement and column

--- a/web/ja/tutorial/handson/section03.html
+++ b/web/ja/tutorial/handson/section03.html
@@ -70,10 +70,14 @@
 		</p>
 	</div>
 	<div class="inucolumn">
-		<h3 id="norereview">他にも似たところないか探す習慣を</h2>
+		<h3 id="norereview">他にも似たところないか探す習慣を</h3>
 		<p>
 			また、何かひとつレビューで指摘されたら、他のところにも似たようなものがないか確認する習慣を付けましょう。
-			例えば本番運用でバグが見つかって、また別の場所で同じバグが発生すると効率が悪いです。同じ指摘を受けないように気をつけましょう。
+			例えば本番運用でバグが見つかって、また別の場所で同じバグが発生すると効率が悪いです。
+		</p>
+		<p>
+			間違いはあっても、一回で過去も未来も直せるプログラマーは信頼できるものです。
+			同じ指摘を受けないように意識してみましょう。
 		</p>
 	</div>
 
