--- a/web/ja/tutorial/handson/section02.html
+++ b/web/ja/tutorial/handson/section02.html
@@ -268,6 +268,7 @@ PROJECT_ROOT
 		さて、ここでじっくり ConditionBean について学んでみましょう。
 	</p>
 	<div class="relatedpage"><a href="../../manual/function/ormapper/conditionbean/index.html">ConditionBean</a></div>
+	<h3 id="firstcb">はじめてのConditionBean</h3>
 	<p>
 		せっかくなので、どのようなデータが入っているかさらに見てみましょう。
 		以下のテストを作成してください。<span class="frm">(メソッド名の先頭にtestを付けましょう。メソッド名はいい感じに...)</span>
