adjust hands-on

--- a/web/ja/tutorial/handson/section06.html
+++ b/web/ja/tutorial/handson/section06.html
@@ -102,7 +102,7 @@
 				<li>指定された suffix で会員名称を後方一致検索</li>
 				<li>会員名称の昇順で並べる</li>
 				<li>suffixが無効な値なら例外: IllegalArgumentException</li>
-				<li>会員名称、生年月日、正式会員日時をログに出す <span class="frm">(Slf4j or CommonsLogging)</span></li>
+				<li>会員名称、生年月日、正式会員日時を画面に表示する想定でログ出力 <span class="frm">(Slf4j or CommonsLogging)</span></li>
 				<li>そのログのログレベル、INFO/DEBUGどちらがいいか考えて実装してみましょう <span class="frm">(この先ずっと同じ)</span></li>
 				<li>このメソッドは、他の人が呼び出すことを想定して public にしましょう <span class="frm">(この先ずっと同じ)</span></li>
 			</ul>
