--- a/web/ja/tutorial/readonlyflute.html
+++ b/web/ja/tutorial/readonlyflute.html
@@ -27,8 +27,9 @@
 	<h1>読むだけDBFlute</h1>
 	<p>
 		DBFluteのコードを読むだけの人のためのチュートリアルです。
-		JavaやSQLはある程度わかることを前提としています。
+		JavaやSQLはある程度わかることを前提としています。説明のためのDBスキーマとして maihamadb を使います。
 	</p>
+	<div class="relatedpage"><a href="../manual/reference/example/maihamadb.html">Maihama DB</a></div>
 	${indexlist}
 
 	<h2 id="letsbegin">まずはじめに知ろう</h2>
