add boolean variable name column to hands-on section3

--- a/web/ja/tutorial/handson/section03.html
+++ b/web/ja/tutorial/handson/section03.html
@@ -53,33 +53,11 @@
 		また、明示的に指定されていなくても、ログ出力でテストが成り立っていることを目でも確認できるように必要に応じて臨機で入れていくと良いでしょう。
 	</p>
 	<p>
+		ところどころに登場するコラムの記事 (jflute's Column) も必見です。
+	</p>
+	<p>
 		Good Luck!
 	</p>
-
-	<div class="inucolumn">
-		<h3 id="forreview">レビューワーを意識してみよう</h3>
-		<p>
-			DBFluteハンズオンのレビューワーがいる人いない人いろいろだと思いますが...
-			いずれにせよ、ハンズオンでコードを書く時は "レビューワー" を意識してみましょう。
-			ぜひ、こちらのブログをお読みください。
-		</p>
-		<div class="detailpage"><a href="http://d.hatena.ne.jp/jflute/20160912/reviewable">レビューしやすいコード (Reviewable Code) | jfluteの日記</a></div>
-		<p>
-			<em class="keyword">レビューしやすいコードってどんなコード？</em>
-			を考え続けることが大切です。
-		</p>
-	</div>
-	<div class="inucolumn">
-		<h3 id="norereview">他にも似たところないか探す習慣を</h3>
-		<p>
-			また、何かひとつレビューで指摘されたら、他のところにも似たようなものがないか確認する習慣を付けましょう。
-			例えば本番運用でバグが見つかって、また別の場所で同じバグが発生すると効率が悪いです。
-		</p>
-		<p>
-			間違いはあっても、一回で過去も未来も直せるプログラマーは信頼できるものです。
-			同じ指摘を受けないように意識してみましょう。
-		</p>
-	</div>
 
 	<h2 id="cbsilver">Silverストレッチ</h2>
 	<dl class="textlist">
@@ -129,6 +107,30 @@
 			</span>
 		</dd>
 	</dl>
+	<div class="inucolumn">
+		<h3 id="forreview">レビューワーを意識してみよう</h3>
+		<p>
+			DBFluteハンズオンのレビューワーがいる人いない人いろいろだと思いますが...
+			いずれにせよ、ハンズオンでコードを書く時は "レビューワー" を意識してみましょう。
+			ぜひ、こちらのブログをお読みください。
+		</p>
+		<div class="detailpage"><a href="http://d.hatena.ne.jp/jflute/20160912/reviewable">レビューしやすいコード (Reviewable Code) | jfluteの日記</a></div>
+		<p>
+			<em class="keyword">レビューしやすいコードってどんなコード？</em>
+			を考え続けることが大切です。
+		</p>
+	</div>
+	<div class="inucolumn">
+		<h3 id="norereview">他にも似たところないか探す習慣を</h3>
+		<p>
+			また、何かひとつレビューで指摘されたら、他のところにも似たようなものがないか確認する習慣を付けましょう。
+			例えば本番運用でバグが見つかって、また別の場所で同じバグが発生すると効率が悪いです。
+		</p>
+		<p>
+			間違いはあっても、一回で過去も未来も直せるプログラマーは信頼できるものです。
+			同じ指摘を受けないように意識してみましょう。
+		</p>
+	</div>
 
 	<h2 id="cbgold">Goldストレッチ</h2>
 	<dl class="textlist">
@@ -179,6 +181,20 @@
 			</span>
 		</dd>
 	</dl>
+	<div class="inucolumn">
+		<h3 id="favoritecomment">コメントを意識してみよう</h3>
+		<p>
+			ハンズオンでは、ソースコードのコメントも意識してみましょう。
+		</p>
+		<p>
+			ぜひ、こちらのブログもお読みください。
+		</p>
+		<div class="detailpage"><a href="http://d.hatena.ne.jp/jflute/20180625/repeatablecomment">オートマティックおうむ返しコメントより背景や理由を | jfluteの日記</a></div>
+		<p>
+			<em class="keyword">書いておくと嬉しいコメントってどんなコメント？</em>
+			を考え続けることが大切です。
+		</p>
+	</div>
 
 	<h2 id="cbplatinum">Platinumストレッチ</h2>
 	<dl class="textlist">
@@ -253,6 +269,19 @@
 			</ul>
 		</dd>
 	</dl>
+	<div class="inucolumn">
+		<h3 id="favoritecomment">true/falseだけだからこそ変数名に迷う</h3>
+		<p>
+			プログラムでは、booleanを使って何か制御することも多いです。
+		</p>
+		<p>
+			ぜひ、こちらのブログもお読みください。
+		</p>
+		<div class="detailpage"><a href="https://jflute.hatenadiary.jp/entry/20181013/flgornuance">なんとかフラグというboolean変数名 | jfluteの日記</a></div>
+		<p>
+			booleanは処理を分岐させる力があるので、実は影響力が強い変数なのですよね。
+		</p>
+	</div>
 
 	<h2 id="paging">CBでページングしてみよう</h2>
 	<p>
@@ -318,21 +347,6 @@
 		いままで書いたエクササイズでもいいですし、新たに適当なテストメソッドを作ってもいいので、ログのSQLを目視で確認して InnerJoinAutoDetect
 		を実感してみるとよいでしょう。
 	</p>
-
-	<div class="inucolumn">
-		<h2 id="favoritecomment">コメントを意識してみよう</h2>
-		<p>
-			ハンズオンでは、ソースコードのコメントも意識してみましょう。
-		</p>
-		<p>
-			ぜひ、こちらのブログもお読みください。
-		</p>
-		<div class="detailpage"><a href="http://d.hatena.ne.jp/jflute/20180625/repeatablecomment">オートマティックおうむ返しコメントより背景や理由を | jfluteの日記</a></div>
-		<p>
-			<em class="keyword">書いておくと嬉しいコメントってどんなコメント？</em>
-			を考え続けることが大切です。
-		</p>
-	</div>
 
 	<h2 id="flower">模範解答的な</h2>
 	<p>
