--- a/web/ja/tutorial/handson/section03.html
+++ b/web/ja/tutorial/handson/section03.html
@@ -157,14 +157,14 @@
 			</ul>
 		</dd>
 		<!-- LikeSearch, DateFromTo, SpecifyColumn -->
-		<dt>[6] 会員名称に "vi" を含む会員を検索</dt>
+		<dt>[6] 2005年10月の1日から3日までに正式会員になった会員を検索</dt>
 		<dd>
 			<ul class="supplementlist">
+				<li>Arrange で String の "2005/10/01", "2005/10/03" を宣言して、Act ではそれを使って検索</li>
+				<li>その条件は、"2005/10/01", "2005/10/03" 以外の日付インスタンスを生成せずに実現 <span class="frm">(日付移動なし)</span></li>
 				<li>会員ステータスも一緒に取得</li>
 				<li>ただし、会員ステータス名称だけ取得できればいい (説明や表示順カラムは不要)</li>
-				<li>2005年10月の1日から3日までに正式会員になった会員を検索</li>
-				<li>"2005/10/01", "2005/10/03" の日付文字列が画面からリクエストされたと想定 <span class="frm">(ArrangeでString型を宣言)</span></li>
-				<li>それら日付を、ArrangeやActの中では一切動かさずに実現すること</li>
+				<li>会員名称に "vi" を含む会員を検索</li>
 				<li>会員名称と正式会員日時と会員ステータス名称をログに出力</li>
 				<li>会員ステータスがコードと名称だけが取得されていることをアサート</li>
 				<li>会員の正式会員日時が指定された条件の範囲内であることをアサート</li>
@@ -221,9 +221,8 @@
 		<dt>[8] 1974年までに生まれた、もしくは不明の会員を検索</dt>
 		<dd>
 			<ul class="supplementlist">
-				<li>"1974/01/01" という日付文字列が画面からリクエストされたと想定</li>
 				<li>Arrange で String の "1974/01/01" を宣言して、Act ではそれを使って検索</li>
-				<li>Arrange, Actでは "1974/01/01" 以外の日付は作らずに条件を実現すること <span class="frm">(日付への変換はOK)</span></li>
+				<li>その条件は、"1974/01/01" 以外の日付インスタンスを生成せずに実現 <span class="frm">(日付移動なし)</span></li>
 				<li>会員ステータス名称、リマインダ質問と回答、退会理由入力テキストを取得する(ログ出力) ※1</li>
 				<li>若い順だが生年月日が null のデータを最初に並べる</li>
 				<li>生年月日が指定された条件に合致することをアサート <span class="frm">(1975年1月1日なら落ちるように)</span></li>
@@ -260,9 +259,8 @@
 		<dt>[9] 2005年6月に正式会員になった会員を先に並べて生年月日のない会員を検索</dt>
 		<dd>
 			<ul class="supplementlist">
-				<li>"2005/06/01" という日付文字列がリクエストされたと想定</li>
 				<li>Arrange で String の "2005/06/01" を宣言して、Act ではそれを使って検索</li>
-				<li>Arrange, Actでは "2005/06/01" 以外の日付は作らずに条件を実現すること <span class="frm">(日付への変換はOK)</span></li>
+				<li>その条件は、"2005/06/01" 以外の日付インスタンスを生成せずに実現 <span class="frm">(日付移動なし)</span></li>
 				<li>第二ソートキーは会員IDの降順</li>
 				<li>検索された会員の生年月日が存在しないことをアサート</li>
 				<li>2005年6月に正式会員になった会員が先に並んでいることをアサート <span class="frm">(先頭だけじゃなく全体をチェック)</span></li>
