add changelog of e.g. show SchemaPolicy violation on SchemaHTML

--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -33,9 +33,13 @@
         <div class="new">
           <h3>NEW</h3>
           <ul>
+            <li>DBFlute Runtime: refactoring of DfMapStyle for comment output</li>
             <li>DBFlute Runtime: terminateLast...() of CallbackContext</li>
             <li>DBFlute Runtime: DfMapStyle@resolvePotentialMapOfBuildingMapString()</li>
             <li>DBFlute Runtime: make option, SpecifyColumnRequired warning only</li>
+            <li>DBFlute Engine: show SchemaPolicy violation on SchemaHTML</li>
+            <li>DBFlute Engine: isSchemaHtmlStyleSheetInheritable of documentMap</li>
+            <li>DBFlute Engine: isHistoryHtmlStyleSheetInheritable of documentMa@</li>
             <li>DBFlute Engine: make BehaviorCommandMeta@getEntityList()</li>
             <li>DBFlute Engine: improve exception message of wrong JDBC type <span class="frm">*前回パッチ</span></li>
             <li>DBFlute Engine: quit FreeGen cls codeOf() deprecated (for internal use) <span class="frm">*前回パッチ</span></li>
