--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -29,10 +29,11 @@
 
       <div class="release">
         <h2>DBFlute-1.2.0 <span class="frm">※Java8</span></h2>
-        <p class="releas5date">2019/04/xx</p>
+        <p class="releas5date">2019/05/01</p>
         <div class="new">
           <h3>NEW</h3>
           <ul>
+            <li>DBFlute Runtime: make isDatetimePrecisionTruncationOfUpdatedEntity</li>
             <li>DBFlute Runtime: refactoring of DfMapStyle for comment output</li>
             <li>DBFlute Runtime: terminateLast...() of CallbackContext</li>
             <li>DBFlute Runtime: DfMapStyle@resolvePotentialMapOfBuildingMapString()</li>
