--- a/web/index.ja.html
+++ b/web/index.ja.html
@@ -29,6 +29,7 @@
 		<div id="leftpart">
 			<h2>News</h2>
 			<ul>
+				<li><span class="date">2019/05/01</span><a href="https://jflute.hatenadiary.jp/entry/20190501/release120">DBFlute-1.2.0 (Java8対応)</a> をリリースしました。</li>
 				<li><span class="date">2019/01/01</span><a href="https://jflute.hatenadiary.jp/entry/20190101/release119">DBFlute-1.1.9 (Java8対応)</a> をリリースしました。</li>
 				<li><span class="date">2018/01/01</span><a href="http://d.hatena.ne.jp/jflute/20180101/release116">DBFlute-1.1.6 (Java8対応)</a> をリリースしました。</li>
 				<li><span class="date">2017/01/01</span><a href="http://d.hatena.ne.jp/jflute/20170101/release112">DBFlute-1.1.2 (Java8対応)</a> をリリースしました。</li>
@@ -42,8 +43,8 @@
 				<li><span class="date">2009/12/14</span><a href="http://dbflute.net.sandbox.seasar.org/">DBFlute.NETの仮のトップページ</a>を公開しました。</li>
 				<li>
 					<div class="inunews">
-					[jfluteのつぶやき] *2019/01/01<br />
-					DBFlute-1.1.9 をリリースしました: <a href="https://jflute.hatenadiary.jp/entry/20190101/release119">DBFlute-1.1.9 Released</a>
+					[jfluteのつぶやき] *2019/05/01<br />
+					DBFlute-1.2.0 をリリースしました: <a href="https://jflute.hatenadiary.jp/entry/20190501/release120">DBFlute-1.2.0 Released</a>
 					</div>
 				</li>
 			</ul>
