--- a/web/ja/manual/function/generator/intro/index.html
+++ b/web/ja/manual/function/generator/intro/index.html
@@ -46,7 +46,7 @@
 		以下のようにリリースされています。
 	</p>
 	<dl class="shortkeymainlist">
-		<dt>2019/05/01</dt><dd><em class="mark">0.3.4</em> :: SchemaPolicyCheckの画面追加、左カラムにナビゲーションバーを追加、AlterCheckの調整</dd>
+		<dt>2019/05/01</dt><dd><em class="mark">0.3.4</em> :: SchemaPolicyCheckの画面追加、ナビゲーションバーを追加</dd>
 		<dt>2019/01/01</dt><dd><em class="mark">0.3.3</em> :: AlterCheckの調整、SchemaPolicyCheckの設定</dd>
 		<dt>2018/12/01</dt><dd><em class="mark">0.3.2</em> :: ReplaceSchema, AlterCheckの実行</dd>
 		<dt>2018/10/21</dt><dd><em class="mark">0.3.1</em> :: Java11 で実行できるように</dd>
