DBFlute Engine: fix SchemaPolicyCheck with classification deployment

--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -33,6 +33,7 @@
         <div class="new">
           <h3>NEW</h3>
           <ul>
+            <li>DBFlute Engine: fix SchemaPolicyCheck with classification deployment <span class="frm">*5/8パッチ</span></li>
             <li>DBFlute Runtime: make isDatetimePrecisionTruncationOfUpdatedEntity</li>
             <li>DBFlute Runtime: refactoring of DfMapStyle for comment output</li>
             <li>DBFlute Runtime: terminateLast...() of CallbackContext</li>
