small fix: improve requirement text

--- a/web/ja/tutorial/handson/section11.html
+++ b/web/ja/tutorial/handson/section11.html
@@ -151,7 +151,7 @@
 				<li>(基点テーブルごとの)モバイルからのログイン回数も導出して取得する</li>
 				<li>指定された判定次第で未払い購入の存在しない会員だけを対象にできるように</li>
 				<li>購入は商品の定価の高い順、購入価格の高い順で並べる</li>
-				<li>会員ごとのログイン回数と購入一覧と購入支払一覧をデバッグログに綺麗に出力する</li>
+				<li>会員ごとの方のログイン回数と購入一覧と購入支払一覧をデバッグログに綺麗に出力する</li>
 				<li>購入支払は、最も推奨されている方法のみ検索</li>
 			</ul>
 		</dd>
