small fix: remove unneeded prefix

--- a/web/ja/environment/upgrade/index.html
+++ b/web/ja/environment/upgrade/index.html
@@ -54,7 +54,7 @@
 	<ul>
 		<li><a href="./emecha.html"><em class="keyword">EMecha(Eclipse Plugin)</em> でウィザード画面からアップグレード</a></li>
 		<li><a href="./maven.html"><em class="keyword">Maven DBFlute Plugin</em> でコマンドからアップグレード</a></li>
-		<li><a href="./plain.html">テンプレートを利用して <em class="keyword">手動</em> でアップグレード</a></li>
+		<li><a href="./plain.html"><em class="keyword">なにもかも手動</em> でアップグレード</a></li>
 	</ul>
 
 	<h2 id="patch">DBFlute Engineのパッチ</h2>
