change LastaFlute release date

--- a/web/ja/lastaflute/howto/upgrade/lachangelog.html
+++ b/web/ja/lastaflute/howto/upgrade/lachangelog.html
@@ -30,7 +30,7 @@
 
       <div class="release">
         <h2>LastaFlute-1.1.2</h2>
-        <p class="releas5date">2019/05/08</p>
+        <p class="releas5date">2019/05/13</p>
         <div class="new">
           <h3>NEW</h3>
           <ul>
@@ -39,6 +39,7 @@
             <li>make defineSqlExecutionCountDefaultLimit() in TypicalAction</li>
             <li>upgrade Hibernate Validator to 6.0.16.Final</li>
             <li>JsonDebugChallenge should not depend on field naming strategy</li>
+            <li>upgrade DBFlute to 1.1.8 (about one year old)</li>
             <li>[Lasta Di] lazy accessible for ClassLoader deep method to avoid Java11 warning</li>
             <li>[Lasta Di] avoid warning of JDK-internal access at Java11 (Sax and BeanDesc)</li>
             <li>[Lasta Di] can specify script engine name in lasta_di.properties for e.g. sai</li>
