--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -33,6 +33,9 @@
         <div class="new">
           <h3>NEW</h3>
           <ul>
+            <li>DBFlute Engine: firstDate comparison should not use time part <span class="frm">*5/12パッチ</span></li>
+            <li>DBFlute Engine: just fix: SchemaPolicyCheck needs history so use lazy-load <span class="frm">*5/12パッチ</span></li>
+            <li>DBFlute Engine: just fix: SchemaPolicyCheck needs firstDateAgent <span class="frm">*5/12パッチ</span></li>
             <li>DBFlute Engine: fix SchemaPolicyCheck with classification deployment <span class="frm">*5/8パッチ</span></li>
             <li>DBFlute Runtime: make isDatetimePrecisionTruncationOfUpdatedEntity</li>
             <li>DBFlute Runtime: refactoring of DfMapStyle for comment output</li>
