write about how to patch by upgrade task

--- a/web/ja/environment/upgrade/index.html
+++ b/web/ja/environment/upgrade/index.html
@@ -109,7 +109,11 @@ DBFlute
 	</p>
 	<h3 id="patchhowto">パッチの適用方法</h3>
 	<p>
-		パッチを適用するときは、以下のような流れになります。
+		いま利用しているDBFlute Engineのバージョンが <em class="mark">1.2.0</em> 以上であれば、通常のアップグレードの手順である <em class="mark">upgradeタスク(94)</em>
+		を実行すれば、DBFlute Engineにパッチが適用されます。<span class="frm">(mydbflute配下のDBFlute Engineが差し替えられます)</span>
+	</p>
+	<p>
+		1.2.0より前のバージョンであれば、以下のような流れになります。
 	</p>
 	<ol>
 		<li>DBFlute Engineの最新版を手動でダウンロード</li>
