adjust hands-on about column

--- a/web/ja/tutorial/handson/section03.html
+++ b/web/ja/tutorial/handson/section03.html
@@ -48,13 +48,17 @@
 		ConditionBeanの使い方、機能のページを参考にしながら実装しましょう。
 	</p>
 	<div class="detailpage"><a href="../../manual/function/ormapper/conditionbean/index.html">ConditionBean</a></div>
+	<h3 id="testtest">テストの前提もアサートしよう</h3>
 	<p>
 		テストが成り立っていることをアサートすることも大事です。
 		また、明示的に指定されていなくても、ログ出力でテストが成り立っていることを目でも確認できるように必要に応じて臨機で入れていくと良いでしょう。
 	</p>
+	<h3 id="readcolumn">コラムの記事も読みましょう</h3>
 	<p>
-		ところどころに登場するコラムの記事 (jflute's Column) も必見です。
+		ところどころに登場するコラムの記事 (jflute's Column) も、ぜひ読んでいきましょう。
+		これもハンズオンの一環です。
 	</p>
+	<h3 id="goodluck">それでは</h3>
 	<p>
 		Good Luck!
 	</p>
