add feedback way of twitter

--- a/web/ja/manual/topic/office/feedback.html
+++ b/web/ja/manual/topic/office/feedback.html
@@ -62,7 +62,14 @@
 	<p>
 		他にもいくつかユニークなチャンネルが用意されています。どのチャンネルも出入り閲覧自由ですしので、ぜひお気軽に眺めてみてください。 
 	</p>
-	<h3 id="blogcomment">ブログコメント</h3>
+	<h3 id="twitter">Twitter (jflute)</h3>
+	<p>
+		Twitterでもフィードバックを受け付けています<span class="frm">(もしくは、TwitterでDBFluteについてつぶやいたら、何か反応させて頂くかもしれません)</span>。
+		ただし、文字数制限があって非常に議論はしづらい環境ですので、込み入った話になってきたら、"DBFluteユーザの集い" や "DBFlute Slack"
+		でやり取りさせて頂く方が良いかもしれません。
+	</p>
+	<div class="relatedpage"><a href="https://twitter.com/jflute">外部サイト - Twitter, jfluteアカウント</a></div>
+	<h3 id="blogcomment">ブログコメント (jfluteの日記)</h3>
 	<p>
 		コミッタ(作者)のブログのコメントでもフィードバックを受け付けています。
 		ただし、非常に議論はしづらい環境ですので、"DBFluteユーザの集い" や "DBFlute Slack"
