add "null item deleted?"

--- a/web/ja/lastaflute/howto/impldesign/jsondesign.html
+++ b/web/ja/lastaflute/howto/impldesign/jsondesign.html
@@ -815,6 +815,7 @@
 		とりあえず、ここまで。また、気づいた時点で追記していきます。
 	</p>
 	<ul>
+		<li>nullの項目を項目ごと削除するかどうかとか!?</li>
 		<li>JSONをラップさせるかどうかとか!?</li>
 		<li>ファイルのアップロードの仕方とか!?</li>
 		<li>ログインどうする!?</li>
