update dbflute intro page

--- a/web/ja/manual/function/generator/intro/index.html
+++ b/web/ja/manual/function/generator/intro/index.html
@@ -168,7 +168,7 @@
 	</dl>
 	<h3 id="welcomeormapper">O/Rマッパーのための項目</h3>
 	<p>
-		O/Rマッパーとしての利用も想定しているなら、"O/R Mapper Option" を押して追加項目も調整しましょう。
+		O/Rマッパーとしての利用も想定しているなら、"O/R Mapper settings" を押して追加項目も調整しましょう。
 	</p>
 	<dl class="keymainlist">
 		<dt>*Language</dt><dd>自動生成クラスのプログラミング言語 e.g. Java</dd>
@@ -187,7 +187,7 @@
 		をダウンロードして、入力された情報を元にDBFluteクライアントをセットアップします。
 	</p>
 	<p>
-		成功すれば、その作成したDBFluteクライアントの操作画面に自動で遷移します。
+		成功すれば、DBFlute Intro のトップ画面に自動で遷移し、作成したDBFluteクライアントが確認できます。
 		DBFlute Intro の war ファイルと同じディレクトリを見ると、DBFluteクライアントとDBFluteエンジンがあるはずです。
 		<span class="frm">(mydbfluteの下には、intro_resourcesというディレクトリがあり、Intro自体のログなどが出力されています)</span>
 	</p>
@@ -207,9 +207,13 @@
 </code></pre>
 
 	<h2 id="firstdoc">とりあえず、テーブル定義ドキュメント <span class="frm">(SchemaHTML)</span></h2>
+	<h3 id="topsnapshot">トップ画面</h3>
+	<p class="imgbox">トップ画面
+		<a href="../../../../../data/snapshot/intro/top/intro-top-snapshot.png" title="DBFluteIntro Top"><img src="../../../../../data/snapshot/intro/top/intro-top-snapshot.png" alt="DBFluteIntro Top" width="550" height="340" /></a>
+	</p>
 	<p>
-		Welcome画面で Create が終わると、DBFluteクライアントのOperate画面が表示されます。この画面で様々な DBFlute
-		の操作ができますが、まずはドキュメントを生成しましょう。
+		Welcome画面で Create が終わると、DBFlute Intro のトップ画面が表示されます。そして表示されているDBFluteクライアントを
+		選択することでOperate画面に繊維できます。この画面で様々な DBFlute の操作ができますが、まずはドキュメントを生成しましょう。
 	</p>
 	<h3 id="operatesnapshot">Operate画面の初期状態</h3>
 	<p class="imgbox">Operate画面
