update pages of decomment and hacomment

--- a/web/ja/manual/function/generator/intro/decomment.html
+++ b/web/ja/manual/function/generator/intro/decomment.html
@@ -86,7 +86,7 @@
 	<div class="relatedpage"><a href="#setup">this - Decommentの環境構築</a></div>
 	<h3 id="bootschemahtml">SchemaHTMLを起動</h3>
 	<p>
-		Intro の Operate 画面の、<em class="mark">Open the table layout ...</em> リンクをクリックします。
+		Intro の Operate 画面の、<em class="mark">SchemaHTML</em> リンクをクリックします。
 	</p>
 	<p class="imgbox">Operate画面のドキュメントリンクあり
 		<a href="../../../../../data/snapshot/intro/operate/intro-operate-linkdoc-snapshot.png" title="DBFluteIntro Operate LinkDoc"><img src="../../../../../data/snapshot/intro/operate/intro-operate-linkdoc-snapshot.png" alt="DBFluteIntro Operate LinkDoc" width="550" height="300" /></a>
