--- a/web/ja/manual/function/generator/intro/hacomment.html
+++ b/web/ja/manual/function/generator/intro/hacomment.html
@@ -70,7 +70,7 @@
 	<div class="relatedpage"><a href="#setup">this - Hacommentの環境構築</a></div>
 	<h3 id="boothistoryhtml">HistoryHTMLを起動</h3>
 	<p>
-		Intro の Operate 画面の、<em class="mark">Open the table history ...</em> リンクをクリックします。
+		Intro の Operate 画面の、<em class="mark">HistoryHTML</em> リンクをクリックします。
 	</p>
 	<p class="imgbox">Operate画面のドキュメントリンクあり
 		<a href="../../../../../data/snapshot/intro/operate/intro-operate-linkdoc-snapshot.png" title="DBFluteIntro Operate LinkDoc"><img src="../../../../../data/snapshot/intro/operate/intro-operate-linkdoc-snapshot.png" alt="DBFluteIntro Operate LinkDoc" width="550" height="300" /></a>
