write about RemoteApi example

--- a/web/ja/lastaflute/howto/architecture/remoteapicall.html
+++ b/web/ja/lastaflute/howto/architecture/remoteapicall.html
@@ -760,6 +760,13 @@ org.docksidestage
 		に、RemoteHarborBhv という RemoteApi の Example コードもあります。 
 	</p>
 	<div class="detailpage"><a href="https://github.com/lastaflute/lastaflute-test-fortress">lastaflute-test-fortress | Github</a></div>
+	<dl class="longkeymainlist">
+		<dt>RemoteHarborBhv</dt><dd>手動作成、単一プロジェクト (harbor)</dd>
+		<dt>RemoteMaihamaHangarBhv</dt><dd>手動作成、マルチプロジェクト (maihama - hangar)</dd>
+		<dt>RemoteMaihamaShowbaseBhv</dt><dd>自動生成, マルチプロジェクト (maihama - showbase)</dd>
+		<dt>RemoteSwaggerPetstoreBhv</dt><dd>自動生成, petstoreを使った動作確認用</dd>
+		<dt>RemoteSwaggerTrickyBhv</dt><dd>自動生成, トリッキーな動作確認用</dd>
+	</dl>
 
 	<h2 id="greatthanks">Great Thanks</h2>
 	<p>
