--- a/web/ja/manual/function/genbafit/implfit/commoncolumn/index.html
+++ b/web/ja/manual/function/genbafit/implfit/commoncolumn/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="Content-Style-Type" content="text/css" />
 	<meta name="keywords" content="DBFlute,共通カラム,CommonColumn,更新日時,更新ユーザ,自動設定" />
 	<style type="text/css" title="currentStyle">@import "../../../../../../css/sub.css";</style>
-	<title>共通カラム | DBFlute</title>
+	<title>共通カラム (CommonColumn) | DBFlute</title>
 </head>
 <body>
 <div id="container" class="ct-manual">
@@ -24,7 +24,7 @@
 </div>
 
 <div id="content"><!-- __content-start__ -->
-	<h1>共通カラム</h1>
+	<h1>共通カラム (CommonColumn)</h1>
 	${indexlist}
 
 	<h2 id="about">共通カラムとは？</h2>
