--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -33,6 +33,7 @@
         <div class="new">
           <h3>NEW</h3>
           <ul>
+            <li>DBFlute Engine: Sql2Entity, parameter bean property for fixed classification list <span class="frm">*7/22パッチ</span></li>
             <li>DBFlute Engine: firstDate comparison should not use time part <span class="frm">*5/12パッチ</span></li>
             <li>DBFlute Engine: just fix: SchemaPolicyCheck needs history so use lazy-load <span class="frm">*5/12パッチ</span></li>
             <li>DBFlute Engine: just fix: SchemaPolicyCheck needs firstDateAgent <span class="frm">*5/12パッチ</span></li>
