--- a/web/ja/lastaflute/howto/upgrade/lachangelog.html
+++ b/web/ja/lastaflute/howto/upgrade/lachangelog.html
@@ -29,6 +29,20 @@
 	${indexlist}
 
       <div class="release">
+        <h2>LastaFlute-1.1.3</h2>
+        <p class="releas5date">2019/07/28</p>
+        <div class="new">
+          <h3>NEW</h3>
+          <ul>
+            <li>make RememberMeCookieAgent in TypicalLoginAssist to be switchable</li>
+            <li>make adjustRegisteredRememberMeCookie() for application customization</li>
+            <li>add HttpOnly to cookie snapshot of CookieManager (for Servlet-3.0)</li>
+            <li>add setCookieDegage() to CookieManager for e.g. httpOnly option</li>
+            <li>refactor TypicalLoginAssist to change CookieManager for remember-me</li>
+          </ul>
+        </div>
+      </div>
+      <div class="release">
         <h2>LastaFlute-1.1.2</h2>
         <p class="releas5date">2019/05/14</p>
         <div class="new">
