about directories that contains spaces in Windows

--- a/web/ja/environment/upgrade/index.html
+++ b/web/ja/environment/upgrade/index.html
@@ -113,6 +113,9 @@ DBFlute
 		を実行すれば、DBFlute Engineにパッチが適用されます。<span class="frm">(mydbflute配下のDBFlute Engineが差し替えられます)</span>
 	</p>
 	<p>
+		<span class="frm">(ただし、Windowsで空白混じりのディレクトリ配下の場合に動作しないので、その場合は後述の手動アップグレード)</span>
+	</p>
+	<p>
 		1.2.0より前のバージョンであれば、以下のような流れになります。
 	</p>
 	<ol>
