about exception message mask

--- a/web/ja/manual/function/genbafit/runtimefit/exceptionhandling/index.html
+++ b/web/ja/manual/function/genbafit/runtimefit/exceptionhandling/index.html
@@ -105,8 +105,7 @@
 		は十分にあります。なので、本番環境のログ自体を暗号化して出力するようにすることが一番です。
 	</p>
 	<p>
-		例えば、Logback や Log4j の独自の Appender を作成して、暗号化してからログに出力するような仕組みを本番環境にだけ設定します。
-		ログを閲覧する人は、複合化のプログラムを経由する必要がありますが、そのプログラムを利用できない人(閲覧の許可がない人)の閲覧を抑制することができます。
+		例えば、Logback や Log4j の独自の Appender を作成して暗号化してからログに出力するような仕組みを本番環境にだけ設定するのも手段の一つですし、インフラの仕組みで自動でログファイルが暗号化されるようにするのも手段の一つでしょう。
 		もちろん、暗号キーは厳密に管理する必要があります。
 	</p>
 	<h3 id="mask">B. (せめて)DBFluteの例外メッセージをマスク</h3>
